Bugfix: add overflow-x to about page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -488,7 +488,6 @@ input[id="rainbow"]:checked~label i {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    width: 100%;
     min-height: calc(100vh - 140px);
 }
 
@@ -635,11 +634,12 @@ button {
     -ms-flex-align: center;
     align-items: center;
     padding: 20px;
+    width: 100%;
+    overflow-x:hidden;
 }
 
 .wrapper {
     max-width: 1100px;
-    padding: 30px;
     font-size: 1.3rem;
     text-align: left;
 }
